# QuoteGuard

./: .env.example  .gitignore  Project_Specifications.md  README.md  pyproject.toml  ruff.toml  sitecustomize.py
.github/workflows/: ci.yml
data/eval/: adversarial.jsonl  benign_control.jsonl  golden.jsonl  golden_v2_template.csv  golden_v2_template.jsonl  golden_v2_template.md
data/processed/benchmarks/: docling_hashing_jsonl.jsonl  pymupdf4llm_hashing_jsonl.jsonl  retrieval_lab.json
data/processed/parser_lab/: corpus_audit.csv  corpus_audit.json  parser_comparison_summary.csv
docs/: architecture.md  contract.md  corpus_notes.md  design_decisions.md  experiment_protocol.md  full_project_writeup.md  future_work.md
evals/: REPORT.md  run_adversarial_eval.py  run_conversation_sim.py  run_rag_eval.py
experiments/retrieval_lab/: README.md
notebooks/: 01_parser_comparison.ipynb  01_parser_lab.ipynb  02_retrieval_sanity.ipynb
reports/: chunk_inspection.md  parser_comparison.md
scripts/: build_benchmark_report.py  build_index.py  fetch_corpus.py  run_retrieval_experiment.py  smoke_chat.py
src/quoteguard/: __init__.py  _compat.py
src/quoteguard/api/: __init__.py  pricing.py  schemas.py
src/quoteguard/config/: logging.py  settings.py
src/quoteguard/guardrails/: __init__.py  behaviour.py  engine.py  input.py  models.py  output.py  retrieval.py
src/quoteguard/ingestion/: chunker.py  embedder.py  models.py  (+1 more)
tests/eval/: __init__.py
tests/integration/: __init__.py  test_build_index.py  test_pricing_handoff.py  test_retrieval_experiment.py  test_risk_profile_flow.py
tests/unit/: __init__.py  test_benchmarking.py  test_chunker.py  test_embedder.py  test_fusion.py  test_guardrails.py  test_parser.py  test_transitions.py
(+114 files in other folders)
