[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quoteguard"
version = "0.1.0"
description = "Guardrailed RAG chatbot for insurance quote support."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.0",
  "docling>=2.0.0",
  "fastapi>=0.111.0",
  "jinja2>=3.1.4",
  "ollama>=0.4.0",
  "presidio-analyzer>=2.2.355",
  "presidio-anonymizer>=2.2.355",
  "pydantic>=2.8.2",
  "pymupdf4llm>=0.0.17",
  "python-dotenv>=1.0.1",
  "rank-bm25>=0.2.2",
  "sentence-transformers>=3.0.1",
  "streamlit>=1.37.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.8.0",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
