[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quoteguard"
version = "0.1.0"
description = "Notebook-first parser lab for Australian insurance PDF retrieval experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "docling>=2.0.0",
  "ipykernel>=6.29.0",
  "jupyterlab>=4.2.0",
  "matplotlib>=3.9.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pymupdf>=1.24.0",
  "pymupdf4llm>=0.0.17",
  "pypdf>=5.0.0",
  "scikit-learn>=1.5.0",
  "sentence-transformers>=3.0.0",
]

[tool.setuptools]
py-modules = []
